# uvicorn-gunicorn-docker

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: deploy.yml  issue-manager.yml  latest-changes.yml  test.yml
docker-images/: python3.10-slim.dockerfile  python3.10.dockerfile  python3.11-slim.dockerfile  python3.11.dockerfile  python3.7.dockerfile  python3.8-slim.dockerfile  python3.8.dockerfile  python3.9-slim.dockerfile  python3.9.dockerfile  requirements.txt
docker-images/app/: main.py
tests/: utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_03_reload/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py
